--- a/Lesson12/mvnApp/pom.xml
+++ b/Lesson12/mvnApp/pom.xml
@@ -50,7 +50,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>com.hillel.Run</mainClass>
+                                <mainClass>com.hillel.RunCollection</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
